[project]
name = "analise de inventário"
version = "1.0"
description = "Analise de planilha de inventario e movimentações"
authors = [
    {name = "Leonardo Magalhaes"}
]
license = {text = "particular"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
